Move configuration instructions to man pages
Create a new krb5-strength man page that gets the configuration
instructions for the plugins (with the proper path substituted in
by the Makefile) and move other configuration details to the
heimdal-strength and heimdal-history man pages.  Duplicate the
documentation for cracklib_maxlen in the heimdal-strength man page.

This will make it easier to automate generation of the README file,
since it will now require less complex formatting.

--- a/NEWS
+++ b/NEWS
@@ -31,6 +31,11 @@ krb5-strength 3.1 (unreleased)
     skip out-of-order words rather than creating a corrupted dictionary.
     Patch from Mark Sirota.
 
+    Configuration instrutions are now in the heimdal-history and
+    heimdal-strength man pages and a new krb5-strength man page (which
+    documents configuration of the KDC plugin) instead of the README file
+    to make it more accessible after the software has been installed.
+
     Update to rra-c-util 6.2:
 
     * Use calloc in preference to malloc wherever appropriate.
