Add NEWS entry for require_classes of a number of classes

--- a/NEWS
+++ b/NEWS
@@ -9,6 +9,10 @@ krb5-strength 3.1 (unreleased)
     SQLite dictionaries work better for checking longer passwords and
     passphrases.  Patch from Jorj Bauer.
 
+    The require_classes configuration option can now require a particular
+    number of character classes in the password (whatever those classes
+    are).  Patch from Toby Blake.
+
     Change the error messages returned for passwords that fail strength
     checking to start with a capital letter.  This appears to be more
     consistent with the error message conventions used inside Heimdal.
