--- a/debian/changelog
+++ b/debian/changelog
@@ -1,5 +1,7 @@
 krb5-strength (3.0-2) UNRELEASED; urgency=medium
 
+  * Switch to the DEP-14 branch layout and update debian/gbp.conf and
+    Vcs-Git accordingly.
   * Prefer *.tar.xz in debian/watch to match packaging.
   * Fix Upstream-Contact email address in debian/copyright.
 
