--- a/debian/changelog
+++ b/debian/changelog
@@ -1,5 +1,15 @@
-krb5-strength (3.0-2) UNRELEASED; urgency=medium
+krb5-strength (3.1-1) UNRELEASED; urgency=medium
 
+  * New upstream release.
+    - New configuration option cracklib_maxlen.
+    - require_classes now supports requiring a minimum number of classes.
+    - Capitalize the first letter of error messages.
+    - Apply SuSE patch for a security vulnerability in the embedded
+      CrackLib.  This didn't affect the way it was used in this package,
+      but best to be sure anyway.
+    - Configuration instructions are now provided in installed man pages,
+      including a new krb5-strength man page, to make them more accessible
+      after installation.
   * Switch to the DEP-14 branch layout and update debian/gbp.conf and
     Vcs-Git accordingly.
   * Prefer *.tar.xz in debian/watch to match packaging.
