--- a/debian/changelog
+++ b/debian/changelog
@@ -16,6 +16,7 @@ krb5-strength (3.1-1) UNRELEASED; urgency=medium
     Vcs-Git accordingly.
   * Prefer *.tar.xz in debian/watch to match packaging.
   * Fix Upstream-Contact email address in debian/copyright.
+  * Switch to https for all package URLs.
 
  -- Russ Allbery <rra@debian.org>  Sun, 13 Apr 2014 12:23:18 -0700
 
