--- a/debian/changelog
+++ b/debian/changelog
@@ -18,6 +18,7 @@ krb5-strength (3.1-1) UNRELEASED; urgency=medium
   * Fix Upstream-Contact email address in debian/copyright.
   * Switch to https for all package URLs.
   * Run wrap-and-sort -ast.
+  * Refresh upstream signing key.
 
  -- Russ Allbery <rra@debian.org>  Sun, 13 Apr 2014 12:23:18 -0700
 
