--- a/debian/changelog
+++ b/debian/changelog
@@ -19,6 +19,7 @@ krb5-strength (3.1-1) UNRELEASED; urgency=medium
   * Switch to https for all package URLs.
   * Run wrap-and-sort -ast.
   * Refresh upstream signing key.
+  * Enable all hardening flags.
 
  -- Russ Allbery <rra@debian.org>  Sun, 13 Apr 2014 12:23:18 -0700
 
