--- a/debian/changelog
+++ b/debian/changelog
@@ -20,6 +20,9 @@ krb5-strength (3.1-1) UNRELEASED; urgency=medium
   * Run wrap-and-sort -ast.
   * Refresh upstream signing key.
   * Enable all hardening flags.
+  * Update to debhelper compatibility level V10.
+    - Remove explicit dh-autoreconf dependency and invocation.
+    - Remove explicit --parallel flags.
   * Update standards version to 3.9.8 (no changes required).
 
  -- Russ Allbery <rra@debian.org>  Sun, 13 Apr 2014 12:23:18 -0700
