--- a/debian/changelog
+++ b/debian/changelog
@@ -10,6 +10,9 @@ krb5-strength (3.1-1) UNRELEASED; urgency=medium
     - Configuration instructions are now provided in installed man pages,
       including a new krb5-strength man page, to make them more accessible
       after installation.
+  * Patch the upstream test suite to change the expected results for a few
+    passwords that are rejected by the embedded CrackLib but accepted by
+    the system CrackLib (which the Debian package is built with).
   * Re-enable treating test suite failures as package build failures now
     that bug #724570 in CrackLib was fixed in Debian.
   * Switch to the DEP-14 branch layout and update debian/gbp.conf and
