--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-krb5-strength (3.1-1) UNRELEASED; urgency=medium
+krb5-strength (3.1-1) unstable; urgency=medium
 
   * New upstream release.
     - New configuration option cracklib_maxlen.
@@ -28,7 +28,7 @@ krb5-strength (3.1-1) UNRELEASED; urgency=medium
     - Remove explicit --parallel flags.
   * Update standards version to 3.9.8 (no changes required).
 
- -- Russ Allbery <rra@debian.org>  Sun, 13 Apr 2014 12:23:18 -0700
+ -- Russ Allbery <rra@debian.org>  Sun, 25 Dec 2016 12:40:41 -0800
 
 krb5-strength (3.0-1) unstable; urgency=medium
 
