--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,14 @@
+krb5-strength (3.1-2) UNRELEASED; urgency=medium
+
+  * Update standards version to 4.2.1.
+    - Enable verbose test output.
+    - Install the upstream release notes as NEWS.gz, not changelog.gz.
+    - Add Rules-Requires-Root: no.
+    - Use https for URLs in debian/copyright.
+    - Change priority to optional.
+
+ -- Russ Allbery <rra@debian.org>  Fri, 31 Aug 2018 16:48:21 -0700
+
 krb5-strength (3.1-1) unstable; urgency=medium
 
   * New upstream release.
