--- a/debian/changelog
+++ b/debian/changelog
@@ -6,6 +6,7 @@ krb5-strength (3.1-2) UNRELEASED; urgency=medium
     - Add Rules-Requires-Root: no.
     - Use https for URLs in debian/copyright.
     - Change priority to optional.
+  * Update to debhelper compatibility levl V11.
   * Bump debian/watch version to 4 and use https.
 
  -- Russ Allbery <rra@debian.org>  Fri, 31 Aug 2018 16:48:21 -0700
