--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-krb5-strength (3.1-2) UNRELEASED; urgency=medium
+krb5-strength (3.1-2) unstable; urgency=medium
 
   * Update standards version to 4.2.1.
     - Enable verbose test output.
@@ -13,7 +13,7 @@ krb5-strength (3.1-2) UNRELEASED; urgency=medium
     format to xz (now the default).
   * Refresh upstream signing key.
 
- -- Russ Allbery <rra@debian.org>  Fri, 31 Aug 2018 16:48:21 -0700
+ -- Russ Allbery <rra@debian.org>  Fri, 31 Aug 2018 17:07:43 -0700
 
 krb5-strength (3.1-1) unstable; urgency=medium
 
